# 8080Emu

./: .gitignore  README.md  TODO
src/: .emulator.h.swo  CMakeLists.txt  common.h  common.h.in  cpu.c  cpu.h  emulator.c  emulator.h  main  main.c  memory.c  memory.h  timer.c  timer.h
